tests/typechecker/fail/017-struct.hyg
(struct {f = 42; g = true}): struct {f: int; g: bool; f: int}

